# jupyterlab-git

./: .all-contributorsrc  .copier-answers.yml  .editorconfig  .eslintignore  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .stylelintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Design.md  Jubilant-octo-winner  LICENSE  MANIFEST.in  README.md  RELEASE.md  ROADMAP.md  Untitled.ipynb  Untitled1.ipynb  babel.config.js  conftest.py  eslint.config.mjs  jest.config.js  jupyter_server_config.py  jupyter_server_test_config.py  package-lock.json  package.json  postBuild  pyproject.toml  release.py  requirements.txt  setup.cfg  setup.py  setupJest.js  setupbase.py  test.ipynb  (+4 more)
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binder-on-pr.yaml  binder-on-pr.yml  build.yml  chatops-binder.yaml  check-release.yml  codeql-analysis.yml  pre-release.yml  prep-release.yml  publish-release.yml  publish.yml  update-integration-tests.yml
.husky/: pre-commit
Bumps actions/: download-artifact from 3 to 4.1.7.
_temp_extension/: .gitignore  LICENSE  README.md  RELEASE.md  install.json  jest.config.js  package.json  pyproject.toml
_temp_extension/binder/: environment.yml  postBuild
_temp_extension/jupyterlab_git/: __init__.py
_temp_extension/schema/: plugin.json
_temp_extension/src/: index.ts
_temp_extension/ui-tests/: package.json
binder/: environment.yml  postBuild
examples/: demo.txt
git_handler/: setup.py
git_handler/git_handler/: __init__.py  handlers.py
git_handler/hi/: setup.py
jupyter-config/jupyter_server_config.d/: jupyterlab_git.json
jupyterlab_git/: README.md  __init__.py  _version.py  git.py  handlers.py  log.py  setup.py  ssh.py
jupyterlab_git/data/: config.ini
jupyterlab_git/jupyterlab_git/: __init__.py  git_class.py  handlers.py
jupyterlab_git/tests/: Test.ipynb  conftest.py  test_branch.py  test_clone.py  test_config.py  test_detailed_log.py  test_diff.py  test_execute.py  test_fetch.py  test_handlers.py  test_hybridcontents.py  test_ignore.py  test_init.py  test_integrations.py  test_jupytext.py  test_pushpull.py  test_remote.py  test_settings.py  test_single_file_log.py  test_stash.py  test_status.py  test_tag.py  testutils.py
schema/: plugin.json
specification/: Git REST API.md  Git_REST_API.md  Git_REST_API.yml
src/: browserDecorations.ts  cancelledError.ts  cloneCommand.ts  cloneCommand.tsx  commandsAndMenu.ts  commandsAndMenu.tsx  components.tsx  declarations.d.ts  generateGraphData.ts  git.ts  gitClone.ts  gitMenuCommands.ts  gitPushPull.ts  git_mainmenu_command.ts  handler.ts  icons.ts  imageDiffPlugin.ts  index.ts  logger.ts  model.ts  notebookDiffPlugin.ts  notifications.ts  notifications.tsx  plainTextDiffPlugin.ts  server.ts  svgPathData.ts  taskhandler.ts  tokens.ts  urls.ts  utils.ts  utils.tsx  version.ts
src/__tests__/: commands.spec.tsx  git-clone-form.spec.tsx  jupyterlab_git.spec.ts  model.spec.tsx  plugin.spec.ts  utils.ts
src/commonData/: components.tsx  interfaces.ts  service.ts
src/components/: ActionButton.tsx  AddRemoteDialogue.tsx  Alert.tsx  BranchHeader.tsx  BranchMenu.tsx  BranchPicker.tsx  CommitAuthorBox.tsx  CommitBox.tsx  CommitComparisonBox.tsx  CommitDiff.tsx  CommitMessage.tsx  CredentialsBox.tsx  Feedback.tsx  FileItem.tsx  FileItemSimple.tsx  FileList.tsx  FilePath.tsx  GitCommitGraph.tsx  GitPanel.tsx  GitSessionNode.tsx  GitSessions.tsx  GitStage.tsx  GitStageSimple.tsx  GitStash.tsx  GitWidget.tsx  HistorySideBar.tsx  ManageRemoteDialogue.tsx  MergeBranchDialog.tsx  NewBranchBox.tsx  NewBranchDialog.tsx  NewTagDialog.tsx  PastCommitNode.tsx  PastCommitNodeInfo.tsx  PastCommits.tsx  PathHeader.tsx  RebaseAction.tsx  ResetDeleteSingleCommit.tsx  ResetRevertCommit.tsx  ResetRevertDialog.tsx  SelectAllButton.tsx  (+13 more)
src/componentsStyle/: BranchHeaderStyle.tsx  FileItemStyle.tsx  GitPanelStyle.tsx  GitStageStyle.tsx  GitWidgetStyle.tsx  HistorySideBarStyle.tsx  NewBranchBoxStyle.tsx  PastCommitNodeStyle.tsx  PathHeaderStyle.tsx  SinglePastCommitInfoStyle.tsx
src/components_style/: BranchHeaderStyle.tsx  FileItemStyle.tsx  FileListStyle.tsx  GitPanelStyle.tsx  GitSessionNodeStyle.tsx  GitStageStyle.tsx  GitWidgetStyle.tsx  HistorySideBarStyle.tsx  NewBranchBoxStyle.tsx  PastCommitNodeStyle.tsx  PastCommitsStyle.tsx  PathHeaderStyle.tsx  SinglePastCommitInfoStyle.tsx
src/style/: AccordionRenderer.ts  ActionButtonStyle.ts  AddRemoteDialog.ts  AlertStyle.ts  BranchHeaderStyle.ts  BranchMenu.ts  BrowserFile.ts  CloneButton.ts  CommitBox.ts  CommitComparisonBox.ts  FileItemSimpleStyle.ts  FileItemStyle.ts  FileItemStyle.tsx  FileListStyle.ts  (+33 more)
style/: add-remote-box.css  advanced-push-form.css  base.css  credentials-box.css  diff-common.css  diff-nb.css  diff-text.css  diff.css  icons.css  index.css  single-selection-form.css  status-widget.css  variables.css
tests/: GitExtension.spec.tsx  commands.spec.tsx  model.spec.tsx  plugin.spec.ts  utils.ts
testutils/: jest-setup-files.js
ui-tests/: README.md  jupyter_server_config.py  jupyter_server_test_config.py  merge-conflict.spec.ts  package.json  playwright.config.js  playwright.config.ts
(+108 files in other folders)
