[build-system]
requires = ["hatchling", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-git-workspace"
dynamic = ["version"]
classifiers = ["Private :: Do Not Upload"]

[tool.hatch.version]
source = "nodejs"
path = "package.json"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description"]

[tool.uv.workspace]
members = ["packages/core", "packages/jupyterlab"]

[tool.uv.sources]
jupyterlab-git-core = { workspace = true }
jupyterlab-git = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.jupyter-releaser]
skip = ["check-python"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
python-packages = ["packages/core", "packages/jupyterlab"]

[tool.jupyter-releaser.hooks]
after-bump-version = [
    "python -c \"import json, subprocess; v=json.load(open('packages/jupyterlab/package.json'))['version']; subprocess.run(['npm','version',v,'--no-git-tag-version','--allow-same-version'], check=True)\"",
]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
