[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Linux, Mac OS X, Windows
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Framework :: Jupyter
  Framework :: Jupyter :: JupyterLab
  Framework :: Jupyter :: JupyterLab :: 3
  Framework :: Jupyter :: JupyterLab :: Extensions
  Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
packages = find:
install_requires =
  jupyter_server
  nbdime~=3.1
  nbformat
  packaging
  pexpect
include_package_data = True
zip_safe = False
python_requires = >=3.6,<4

[options.extras_require]
dev=
  black
  coverage
  jupyter_packaging~=0.7.9
  jupyterlab~=3.0
  pre-commit
  pytest
  pytest-asyncio
  pytest-cov
  pytest-tornasync
tests=
  %(dev)s
  hybridcontents

